--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.22",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-paper": "4.9.2",
-    "react-native-screens": "3.31.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0"
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
