--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
