--- a/package.json
+++ b/package.json
@@ -7,19 +7,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.1.6",
+    "@dotlottie/react-player": "^1.6.19",
     "@expo/vector-icons": "^14.0.2",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.22",
+    "expo-constants": "^16.0.2",
+    "expo-linking": "^6.3.1",
+    "expo-modules-autolinking": ">=0.8.1",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^8.10.0",
+    "firebase": "^10.12.5",
+    "firestore": "^1.1.6",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.5",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "*",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
