--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
+    "@rnmapbox/maps": "^10.1.28",
     "expo": "~51.0.22",
     "expo-constants": "^16.0.2",
     "expo-linking": "^6.3.1",
