--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "expo": "~51.0.22",
     "expo-constants": "^16.0.2",
     "expo-linking": "^6.3.1",
+    "expo-location": "~17.0.1",
     "expo-modules-autolinking": ">=0.8.1",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
@@ -26,6 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-element-dropdown": "^2.12.1",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -35,5 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "name": "chopex-dev",
+  "version": "1.0.0"
 }
