--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@babel/preset-env": "^7.1.6",
@@ -12,18 +13,25 @@
     "@expo/vector-icons": "^14.0.2",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/geolocation": "^3.3.0",
+    "@react-native/gradle-plugin": "^0.75.1",
     "@react-navigation/native": "^6.1.18",
     "@rnmapbox/maps": "^10.1.28",
     "expo": "~51.0.22",
+    "expo-asset": "~10.0.10",
     "expo-constants": "^16.0.2",
     "expo-linking": "^6.3.1",
     "expo-location": "~17.0.1",
     "expo-modules-autolinking": ">=0.8.1",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.7",
     "firebase": "^10.12.5",
     "firestore": "^1.1.6",
     "lottie-react-native": "^6.7.2",
+    "node-fetch": "2.6.7",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
@@ -33,10 +41,12 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "*",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "yarn-audit-fix": "^10.0.9"
   },
   "private": true,
   "name": "chopex-dev",
